Implemented basic methods for the first of the day 3 problems. Also need to find my notes for algorithms and data structures.  ¯\_(´・ω・｀)_/¯

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ add_executable(calories
 
 add_executable(rps
         02/rockpaperscissors.cpp)
+
+add_executable(rucksack
+        03/rucksack.cpp)
